--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "iotiscool-c",
+  "name": "rockiot-client",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "rockiot.server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build-dev": "webpack -d --mode development",
