--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "rockiot-client",
   "version": "1.1.0",
   "description": "",
-  "main": "rockiot.server.js",
+  "main": "rockiot.client.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build-dev": "webpack -d --mode development",
     "build-prod": "webpack -p --mode production"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": ["feathersjs-client-wrapper,rockiot-api client"],
+  "author": "Antonio Nardone",
+  "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.7.5",
     "babel-core": "^6.26.3",
@@ -27,5 +27,9 @@
     "@feathersjs/client": "^4.4.3",
     "@feathersjs/socketio-client": "^4.4.3",
     "socket.io-client": "^2.3.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/swina/rockiot-client.git"
+  },
 }
